[project]
name = "pdfje"
version = "0.6.2dev0"
description = "Write beautiful PDFs in declarative Python"
authors = [{ name = "Arie Bovenberg", email = "a.c.bovenberg@gmail.com" }]
requires-python = ">=3.10"
readme = "README.rst"
license = "MIT"
keywords = ["pdf"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
fonts = ["fonttools>=4.38.0,<5"]
hyphens = ["pyphen>=0.13.0"]

[project.urls]
Repository = "https://github.com/ariebovenberg/pdfje"
Documentation = "https://pdfje.readthedocs.io"

[dependency-groups]
test = [
    "pytest>=8,<10",
    "pytest-cov>=4,<8",
    "pytest-benchmark>=4,<6",
    "hypothesis>=6.68.2,<7",
]
typecheck = [
    "mypy>=2.1,<3"
]
linting = [
    "slotscheck>=0.17,<0.21",
    "ruff>=0.15,<0.16",
]
docs = [
    "sphinx>=9.1,<10",
    "furo~=2025.12.19",
    "sphinx-toolbox~=4.2.0",
    "sphinx-autodoc-typehints~=3.0",
]

[tool.uv]
default-groups = "all"

[tool.uv.dependency-groups]
docs = {requires-python = ">=3.13"}

[build-system]
requires = ["uv_build>=0.11.22,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["docs/conf.py", "src/pdfje/vendor"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true
exclude-modules = "^pdfje\\.vendor.*"
